fix slider height on mobile

--- a/index.css
+++ b/index.css
@@ -1795,8 +1795,8 @@
 
   .u-section-8 .u-slider-1 {
     min-height: 661px;
-    margin-top: -94px;
-    margin-bottom: -30px;
+    margin-top: -52px;
+    margin-bottom: 30px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
